--- a/index.html
+++ b/index.html
@@ -78,6 +78,7 @@
   const sona_credit_token = "NA"; // The SONA credit token 
   const Prolific_redirect = "CHGWKNI0"; // The Prolific redirect link (to credit)
   const Prolific_failed_check = "C13PIUOF"; // The Prolific redirect link to NOT credit (manual review)
+  const task_time = 15;
   
 
 
@@ -91,7 +92,7 @@ jsPsych.data.addProperties({outcome_condition: outcome});
 
   
   var no_trials = 36; // number of trials in each block
-  var total_blocks = 3; //note only updates instructions
+
 
 
 
@@ -626,8 +627,8 @@ if(typeof SONAID != 'undefined'){
 
 
 // Create Experiment
-//browser_check, enter_fullscreen, participant_info_paid, participant_info_SONA, instructions, practice_block, practice_end, conf_instruc, test_start, test_block, new_block, test_block, new_block, test_block, debug, save_data, DEBRIEF_SONA
-  condition_1_timeline = [ train_block, efficacy_rating ];
+
+  condition_1_timeline = [ participant_info_paid, participant_info_SONA, instructions, train_block, efficacy_rating,debug, save_data, DEBRIEF_SONA ];
 
   async function createExperiment(){
     const condition = await jsPsychPipe.getCondition(DataPipe_ID);
